style.Css
/* ... */
@media (min-width: 700px) and (max-width: 1440px) {
  .second-section ul li {
    white-space: nowrap;
  }
  .third-section-text .elegance {
    align-self: flex-end;
    margin-right: 5%;
  }
  .sixth-section::after {
    width: 78%;
    height: 60%;
  }
  .side-cercle-div h1 {
    font-size: xx-large;
    line-height: 2.125rem;
  }
  .side-cercle-div p {
    font-size: larger;
  }
  .side-cercle-div a {
    padding: 1.2rem 3rem;
    font-size: 1rem;
  }
  .left-footer {
    justify-content: space-between;
    gap: 160px;
  }
  .img-section-side-cercle::after {
    width: 102%;
  }
}
@media (min-width: 800px) and (max-width: 1440px) {
  .nav-out .header-box {
    display: inline-block;
    font-size: 0.9rem;
  }
  .first-section h1 {
    font-size: 6rem;
  }
  .home-text h1 {
    line-height: 6rem;
  }
  .second-section ul {
    column-gap: 7rem;
  }
  .card {
    max-width: 400px;
  }
  .card img {
    max-width: 374px;
  }
  .side-cercle-div {
    width: 70%;
  }
  .section-header {
    padding: 2rem;
  }
  .section-header-title {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }
  .section-header-title h1 {
    font-size: 3rem;
  }
  .section-header-title p {
    font-size: 1.25rem;
  }
  .fifth-section .section-header {
    justify-content: space-between;
    gap: 166px;
  }
  .sixth-section::after {
    width: 68%;
    height: 61%;
  }
  .seventh-section ul {
    margin-left: -60%;
  }
  .seventh-section ul li {
    font-size: 1.5rem;
  }
  .seventh-section h1 {
    margin-left: -15%;
    font-size: -webkit-xxx-large;
  }
  .tenth-section-text {
    text-align: left;
    padding: 25% 0 0 0;
    margin-left: -25%;
  }
}
@media (min-width: 900px) and (max-width: 1440px) {
  .home-text {
    gap: 2rem;
  }
  .second-section ul {
    column-gap: 10rem;
  }
  .third-section-text h1 {
    margin-left: 12%;
    font-size: 3rem;
  }
  .third-section-text .elegance {
    margin-right: 16%;
  }
  .sixth-section::after {
    width: 63%;
    height: 70%;
  }
  .side-cercle-div {
    width: 65%;
    gap: 3rem;
  }
  .side-cercle-div p {
    line-height: 2rem;
  }
  .nineth-section .elegance {
    margin-right: 3%;
    margin-bottom: 42px;
  }
  .tenth-section-text {
    text-align: left;
    padding: 20% 0 0 0;
    margin-left: -35%;
  }
  .footer-container-flex {
    align-items: flex-start;
    justify-content: baseline;
  }
  .get-email {
    margin-left: 2%;
  }
  .get-email h2 {
    font-size: 2.75rem;
    line-height: 2rem;
  }
  .get-email form {
    display: flex;
    flex-direction: row;
    gap: 30px;
  }
  .get-email form input {
    width: 120%;
  }
  .right-footer {
    align-items: start;
  }
  .list-right-footer ul {
    gap: 600px;
  }
  .left-footer {
    margin-left: 111px;
    gap: 500px;
  }
  .footer-footer {
    flex-direction: row;
    justify-content: space-between;
  }
}
/*Tablette*/
@media (min-width: 990px) and (max-width: 1440px) {
  /*Header*/
  header {
    width: 100%;
    height: 10vh;
    justify-content: space-evenly;
  }
  .search img {
    margin-top: 0;
  }
  .responsivity {
    display: none;
  }
  .responsivity button {
    display: none;
  }
  .responsivity button img {
    display: none;
  }
  .logo {
    align-self: center;
  }

  .side-bare-div img {
    display: none;
  }
  .close-btn {
    position: absolute;
    left: 88.9%;
    top: 1%;
    background: none;
    border: none;
  }
  .close-btn svg {
    width: 30px;
    height: 30px;
    color: #ffffff;
  }
  .nav-out ul {
    gap: 0px;
  }

  .nav-in,
  .nav-out .quote-box {
    display: flex;
  }
  .nav-in ul {
    flex-direction: row;
    padding-left: 0;
    padding-top: 0;
    flex-wrap: wrap;
    gap: 12%;
  }
  /*header*/
  .home-text h1 {
    font-size: 7rem;
    line-height: 6rem;
  }
  .home-text p {
    font-size: 2rem;
  }
  .second-section ul {
    column-gap: 15rem;
  }
  .second-section ul li h3 {
    font-size: 1.125rem;
  }
  .third-section-text h1 {
    margin-left: 15%;
    font-size: 3rem;
  }
  .third-section-text p {
    font-size: 1.35rem;
  }
  .fifth-section .section-header {
    justify-content: space-between;
    gap: 248px;
  }
  .card {
    max-width: 500px;
  }
  .card img {
    max-width: 469px;
  }
  .side-cercle-div {
    width: 60%;
    gap: 3rem;
  }
  .sixth-section::after {
    width: 59%;
    height: 72%;
    left: 10%;
  }
  .tenth-section-text p {
    font-size: 1.35rem;
  }
  .list-right-footer ul {
    gap: 700px;
  }
  .left-footer {
    margin-left: 0;
    gap: 460px;
    padding: 0;
    padding-left: 113px;
  }
  .footer-footer {
    flex-direction: row;
    justify-content: space-between;
    width: 95%;
  }
}
@media (min-width: 1090px) and (max-width: 1440px) {
  .nav-in ul li a {
    font-size: 1.125rem;
  }
  .footer-logo {
    margin-right: 0;
  }
  .left-footer {
    margin-left: 0;
    gap: 637px;
    padding: 0;
    padding-left: 18px;
  }
}
@media (min-width: 1190px) and (max-width: 1440px) {
  .section-cards {
    justify-content: space-evenly;
    margin-left: -110px;
  }
  .fifth-section .section-header {
    gap: 530px;
  }
  .card-title {
    margin-left: 100px;
  }
  .card {
    width: 500px;
  }
  .card img {
    width: 500px;
  }
  .sixth-section::after {
    width: 58%;
  }
}
/* ... */

